--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ class="font-semibold font-poppins m-auto w-full bg-white dark:bg-slate-950 dark:
 <!-- END HEADER -->
 <!-- NAVIGATION -->
 <div id="navigationMainIcon" class="backdrop-filter backdrop-blur-md fixed shadow h-12 gap-2 px-3 items-center flex rounded-full bottom-0 mb-[10vh] right-1/2 translate-x-1/2 z-10">
-  <a href="#home" class="text-white rounded-full">
+  <a href="#home" class="p-2 rounded-full">
     <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
       <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 12l8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25" />
     </svg>
@@ -423,7 +423,7 @@ class="font-semibold font-poppins m-auto w-full bg-white dark:bg-slate-950 dark:
         </p>
       </div>
       <div @keyup.escape.window="showCertificate = false" x-show="showCertificate" class="fixed top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 z-30 w-full h-screen flex justify-center items-center bg-black/70" style="display: none;">
-        <img @click.outside="showCertificate = false" class="w-[90%]" src="dist/image/sertifikat-2.jpg" alt="">
+          <img @click.outside="showCertificate = false" class="w-[90%]" src="dist/image/sertifikat-2.jpg" alt="">
       </div>
     </div>
 
@@ -486,9 +486,9 @@ class="font-semibold font-poppins m-auto w-full bg-white dark:bg-slate-950 dark:
   <section class="max-w-4xl m-auto pb-12 flex flex-col lg:flex-row-reverse lg:justify-between">
     <form action="https://formsubmit.co/bcaada81c10df6e89b6a81e2af00286f" method="POST" class="flex justify-center mt-8 flex-col m-auto lg:m-0 gap-4 w-3/4 lg:w-1/2">
       <input name="name" class="bg-darkPrimary outline-none rounded-md p-2 placeholder:text-sm text-white" placeholder="Name" type="text">
-      <input name="email" class="bg-darkPrimary outline-none rounded-md p-2 placeholder:text-sm text-white" placeholder="Email" type="text">
+      <input name="email" class="bg-darkPrimary outline-none rounded-md p-2 placeholder:text-sm text-white" placeholder="Email" type="email">
       <textarea name="desc" class="p-2 rounded-md outline-none bg-darkPrimary resize-none placeholder:text-sm text-white" placeholder="Type Here ..." rows="6"></textarea>
-      <button name="submit" class="text-white flex justify-center items-center gap-2 bg-gradient-to-r from-secondary to-tertiary p-2 rounded-xl text-sm" type="submit">
+      <button class="text-white flex justify-center items-center gap-2 bg-gradient-to-r from-secondary to-tertiary p-2 rounded-xl text-sm" type="submit">
         Send
         <svg width="16" height="16" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M4.5 8.99998L2.45175 2.34448C7.35136 3.76924 11.9717 6.02008 16.1138 8.99998C11.9721 11.9803 7.35193 14.2317 2.4525 15.657L4.5 8.99998ZM4.5 8.99998H10.125" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
