--- a/index.html
+++ b/index.html
@@ -169,12 +169,12 @@ class="font-semibold font-poppins m-auto w-full bg-white dark:bg-slate-950 dark:
     </div>
     <!-- END TITLE -->
     <!-- DOWNLOAD CV (BUTTON) -->
-    <button id="homeDownloadCv" class="mt-3 text-xs font-medium flex items-center gap-3 bg-gradient-to-tl from-primary to-purple-600 text-white py-2 px-4 rounded-full">
+    <a href="dist/output.css" download id="homeDownloadCv" class="mt-3 text-xs font-medium flex items-center gap-3 bg-gradient-to-tl from-primary to-purple-600 text-white py-2 px-4 rounded-full">
       <span x-text="$store.language.isEnLanguage ? 'Download CV' : 'Unduh CV'"></span>
       <svg class="w-4 h-4" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
         <path stroke-linecap="round" stroke-linejoin="round" d="M3 16.5v2.25A2.25 2.25 0 005.25 21h13.5A2.25 2.25 0 0021 18.75V16.5M16.5 12L12 16.5m0 0L7.5 12m4.5 4.5V3" />
       </svg>        
-    </button>
+    </a>
     <!-- END DOWNLOAD CV (BUTTON) -->
     <!-- SOCIAL MEDIA -->
     <div id="homeMainSocialMedia" class="flex gap-6 mt-5 items-center">
@@ -447,14 +447,15 @@ class="font-semibold font-poppins m-auto w-full bg-white dark:bg-slate-950 dark:
         duration-300" 
         src="dist/image/project-1.jpg" alt="">
       </div>
-      <a href="#" class="flex items-center justify-between">
+      <a href="https://github.com/ArryPutra/tewiter" target="_blank" class="flex items-center justify-between">
         <h1 class="text-xl">Tewiter</h1>
         <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M11.25 5H4.375C3.87772 5 3.40081 5.19754 3.04917 5.54917C2.69754 5.90081 2.5 6.37772 2.5 6.875V15.625C2.5 16.1223 2.69754 16.5992 3.04917 16.9508C3.40081 17.3025 3.87772 17.5 4.375 17.5H13.125C13.6223 17.5 14.0992 17.3025 14.4508 16.9508C14.8025 16.5992 15 16.1223 15 15.625V8.75M6.25 13.75L17.5 2.5M17.5 2.5H13.125M17.5 2.5V6.875" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round"/>
         </svg>          
       </a>
       <p 
-      x-text="$store.language.isEnLanguage ? '' 
+      x-text="$store.language.isEnLanguage ? 
+      'A simple twitter cloning website, creation using the Laravel framework. This website was created by myself.' 
       : 'Sebuah website cloning twitter sederhana, pembuatan menggunakan framework Laravel. Website ini dibuat oleh diri saya sendiri.'"
       class="text-sm font-medium opacity-70 mt-1.5 mb-5">
       </p>
