--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@ class="font-semibold font-poppins m-auto w-full bg-white dark:bg-slate-950 dark:
         duration-300" 
         src="dist/image/project-1.jpg" alt="">
       </div>
-      <a href="https://github.com/ArryPutra/tewiter" target="_blank" class="flex items-center justify-between">
+      <a href="https://github.com/ArryPutra/tewiter" target="_blank" class="flex justify-between">
         <h1 class="text-xl">Tewiter</h1>
         <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M11.25 5H4.375C3.87772 5 3.40081 5.19754 3.04917 5.54917C2.69754 5.90081 2.5 6.37772 2.5 6.875V15.625C2.5 16.1223 2.69754 16.5992 3.04917 16.9508C3.40081 17.3025 3.87772 17.5 4.375 17.5H13.125C13.6223 17.5 14.0992 17.3025 14.4508 16.9508C14.8025 16.5992 15 16.1223 15 15.625V8.75M6.25 13.75L17.5 2.5M17.5 2.5H13.125M17.5 2.5V6.875" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round"/>
@@ -465,6 +465,32 @@ class="font-semibold font-poppins m-auto w-full bg-white dark:bg-slate-950 dark:
       <span class="text-sm font-medium border border-slate-200 
       dark:border-slate-800 p-2 rounded-md ml-2 hover:bg-gray-50
       dark:hover:bg-slate-900">Laravel</span>
+    </div>
+
+    <div id="project" class="w-72">
+      <div class="group w-72 h-44 overflow-hidden m-auto mb-2.5 rounded-lg relative">
+        <img class="object-cover mb-2 hover:scale-110 hover:brightness-50
+        duration-300" 
+        src="dist/image/project-2.jpg" alt="">
+      </div>
+      <a href="https://qr-code-generator-and-qr-code-scanner.en.uptodown.com/android" target="_blank" class="flex justify-between">
+        <h1 class="text-xl">QR Code Scanner & Generate</h1>
+        <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M11.25 5H4.375C3.87772 5 3.40081 5.19754 3.04917 5.54917C2.69754 5.90081 2.5 6.37772 2.5 6.875V15.625C2.5 16.1223 2.69754 16.5992 3.04917 16.9508C3.40081 17.3025 3.87772 17.5 4.375 17.5H13.125C13.6223 17.5 14.0992 17.3025 14.4508 16.9508C14.8025 16.5992 15 16.1223 15 15.625V8.75M6.25 13.75L17.5 2.5M17.5 2.5H13.125M17.5 2.5V6.875" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>          
+      </a>
+      <p 
+      x-text="$store.language.isEnLanguage ? 
+      'The app allows you to scan QR codes and create beautiful custom QR codes. The manufacturing process takes about 2 months.' 
+      : 'Aplikasi ini memungkinkan Anda untuk memindai QR code dan membuat QR code kustom yang cantik. Proses pembuatannya memakan waktu sekitar 2 bulan.'"
+      class="text-sm font-medium opacity-70 mt-1.5 mb-5">
+      </p>
+      <span class="text-sm font-medium border border-slate-200 
+      dark:border-slate-800 p-2 rounded-md hover:bg-gray-50
+      dark:hover:bg-slate-900">Flutter</span>
+      <span class="text-sm font-medium border border-slate-200 
+      dark:border-slate-800 p-2 rounded-md ml-2 hover:bg-gray-50
+      dark:hover:bg-slate-900">Dart</span>
     </div>
 
   </main>
