--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
 </script>
 <style>
   #homeMainTitle h1:nth-child(1) {
-    animation: homeMainTitleAnimation 2.5s alternate infinite ease-in-out;
-    margin-top: -34px;
+    animation: homeMainTitleAnimation 3s alternate infinite ease-in-out;
   }
   @keyframes homeMainTitleAnimation {
     0% {
@@ -51,16 +50,16 @@
       margin-top: 0px;
     }
     40% {
-      margin-top: 0px;
+      margin-top: -34px;
     }
     60% {
       margin-top: -34px;
     }
     80% {
-      margin-top: -34px;
+      margin-top: -68px;
     }
     100% {
-      margin-top: -34px;
+      margin-top: -68px;
     }
   }
 </style>
@@ -163,13 +162,14 @@ class="font-semibold font-poppins m-auto w-full bg-white dark:bg-slate-950 dark:
     </h1>
     <!-- END NAME -->
     <!-- TITLE -->
-    <div id="homeMainTitle" class="overflow-hidden h-8 text-center">
+    <div id="homeMainTitle" class="overflow-hidden h-8 text-center md:text-start">
       <h1 id="homeTitle" class="text-2xl">Web Developer</h1>
       <h1 id="homeTitle" class="text-2xl">App Developer</h1>
+      <h1 id="homeTitle" class="text-2xl">UI Designer</h1>
     </div>
     <!-- END TITLE -->
     <!-- DOWNLOAD CV (BUTTON) -->
-    <a href="dist/output.css" download id="homeDownloadCv" class="mt-3 text-xs font-medium flex items-center gap-3 bg-gradient-to-tl from-primary to-purple-600 text-white py-2 px-4 rounded-full">
+    <a href="dist/pdf/Arry Kusuma Putra - Curriculum Vitae.pdf" download id="homeDownloadCv" class="mt-3 text-xs font-medium flex items-center gap-3 bg-gradient-to-tl from-primary to-purple-600 text-white py-2.5 px-4 rounded-full">
       <span x-text="$store.language.isEnLanguage ? 'Download CV' : 'Unduh CV'"></span>
       <svg class="w-4 h-4" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
         <path stroke-linecap="round" stroke-linejoin="round" d="M3 16.5v2.25A2.25 2.25 0 005.25 21h13.5A2.25 2.25 0 0021 18.75V16.5M16.5 12L12 16.5m0 0L7.5 12m4.5 4.5V3" />
@@ -357,6 +357,15 @@ class="font-semibold font-poppins m-auto w-full bg-white dark:bg-slate-950 dark:
           </svg>                                
         </div>
         <h1>ReactJS</h1>
+      </div>
+    </span>
+    <!-- FIGMA -->
+    <span>
+      <div class="flex flex-col items-center gap-4">
+        <div class="hover:bg-gray-50 dark:hover:bg-slate-900 hover:scale-95 duration-100 border-2 border-slate-100 dark:border-slate-900 w-[4.8rem] h-[4.4rem] rounded-lg flex items-center justify-center">
+          <svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 48 48" width="42px" height="42px"><path fill="#e64a19" d="M26,17h-8c-3.866,0-7-3.134-7-7v0c0-3.866,3.134-7,7-7h8V17z"/><path fill="#7c4dff" d="M25,31h-7c-3.866,0-7-3.134-7-7v0c0-3.866,3.134-7,7-7h7V31z"/><path fill="#66bb6a" d="M18,45L18,45c-3.866,0-7-3.134-7-7v0c0-3.866,3.134-7,7-7h7v7C25,41.866,21.866,45,18,45z"/><path fill="#ff7043" d="M32,17h-7V3h7c3.866,0,7,3.134,7,7v0C39,13.866,35.866,17,32,17z"/><circle cx="32" cy="24" r="7" fill="#29b6f6"/></svg>
+        </div>
+        <h1>Figma</h1>
       </div>
     </span>
   </div>
