--- a/index.html
+++ b/index.html
@@ -357,6 +357,48 @@ class="font-semibold font-poppins m-auto w-full bg-white dark:bg-slate-950 dark:
         <h1>Dart</h1>
       </div>
     </span>
+    <!-- KOTLIN -->
+    <span>
+      <div class="flex flex-col items-center gap-4">
+        <div class="hover:bg-gray-50 dark:hover:bg-slate-900 hover:scale-95 duration-100 border-2 border-slate-100 dark:border-slate-900 w-[4.8rem] h-[4.4rem] rounded-lg flex items-center justify-center">
+          <svg width="49" height="49" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M21 5.25L15.7412 10.8063L10.4738 16.3538L5.25 21.875V5.25H21Z" fill="#0D91D6"/>
+            <path d="M21 5.25H20.965L15.7237 10.7887L10.465 16.345L5.25 21.8487V21.875V21.9538V36.75L12.8537 29.1463L18.2613 23.7387L23.6775 18.3225L29.0938 12.9062L36.75 5.25H21Z" fill="#F88909"/>
+            <path d="M12.8537 29.1462L5.25 36.75V21.9537L12.8537 29.1462Z" fill="#C757BC"/>
+            <path d="M18.2613 23.7388L12.8537 29.1463L5.25 21.9538V21.875L10.4738 16.3538L18.2613 23.7388Z" fill="#D3638F"/>
+            <path d="M23.6774 18.3225L18.2611 23.7388L10.4736 16.3538L15.7411 10.8063L23.6774 18.3225Z" fill="#E07063"/>
+            <path d="M29.0937 12.9062L23.6775 18.3225L15.7412 10.8063L21 5.25L29.0937 12.9062Z" fill="#EC7D36"/>
+            <path d="M36.75 5.25L29.0938 12.9062L21 5.25H36.75Z" fill="#F88909"/>
+            <path d="M10.0712 16.7563L6.99125 20.02L5.25 18.375V12.1975L10.0712 16.7563Z" fill="#0095D5"/>
+            <path d="M13.1512 13.4925L10.0712 16.7562L5.25 12.1975V6.01123L13.1512 13.4925Z" fill="#2B88DA"/>
+            <path d="M16.24 10.2375L13.1512 13.4925L5.25 6.01125V5.25H10.9637L16.24 10.2375Z" fill="#557BDE"/>
+            <path d="M19.3201 6.97375L16.2401 10.2375L10.9639 5.25H21.0001L19.3201 6.97375Z" fill="#806EE3"/>
+            <path d="M20.125 21.875L5.25 36.75H8.18125H15.33H35L20.125 21.875Z" fill="#0095D5"/>
+            <path d="M22.47 36.7501H15.33L10.29 31.7188L13.86 28.1488L22.47 36.7501Z" fill="#2B88DA"/>
+            <path d="M29.6274 36.75H22.4699L13.8599 28.1487L17.4299 24.5787L29.6274 36.75Z" fill="#557BDE"/>
+            <path d="M36.7502 36.75H29.6277L17.4302 24.5788L21.0002 21L36.7502 36.75Z" fill="#806EE3"/>
+          </svg>                                                                
+        </div>
+        <h1>Kotlin</h1>
+      </div>
+    </span>
+    <!-- JAVA -->
+    <span>
+      <div class="flex flex-col items-center gap-4">
+        <div class="hover:bg-gray-50 dark:hover:bg-slate-900 hover:scale-95 duration-100 border-2 border-slate-100 dark:border-slate-900 w-[4.8rem] h-[4.4rem] rounded-lg flex items-center justify-center">
+          <svg width="60" height="60" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M20.6935 21.7866C19.8202 20.3788 19.1867 19.2115 18.3091 17.0135C16.8251 13.3009 27.3347 9.94613 23.0735 3.5C24.9206 7.95288 16.4436 10.7056 15.6561 14.4139C14.936 17.8246 20.6891 21.7866 20.6935 21.7866Z" fill="#F44336"/>
+            <path d="M20.8923 15.1113C20.7243 17.3128 22.8427 18.4862 22.9039 20.0945C22.9529 21.4035 21.6378 22.4946 21.6378 22.4946C21.6378 22.4946 24.0248 22.0256 24.7694 20.0288C25.5963 17.8116 23.1647 16.2935 23.4149 14.5181C23.6485 12.8223 28.692 9.66797 28.692 9.66797C28.692 9.66797 21.2712 10.1597 20.8923 15.1113Z" fill="#F44336"/>
+            <path d="M28.0735 21.9229C29.6083 21.5782 30.9024 22.5556 30.9024 23.6817C30.9024 26.2201 27.384 28.6193 27.384 28.6193C27.384 28.6193 32.8309 27.9701 32.8309 23.8024C32.8309 21.0462 30.156 20.3576 28.0735 21.9229ZM25.4879 23.9704C25.4879 23.9704 27.1863 22.7603 27.6387 22.3062C23.471 23.1908 13.9554 23.3098 13.9554 22.5416C13.9554 21.8337 17.024 21.1083 17.024 21.1083C17.024 21.1083 10.2227 21.0103 10.2227 23.0167C10.2227 25.1079 19.1258 25.2576 25.4879 23.9704Z" fill="#1565C0"/>
+            <path d="M24.4432 25.8747C20.4979 27.1864 13.231 26.7672 15.3835 25.0059C14.3352 25.0059 12.7812 25.8485 12.7812 26.6587C12.7812 28.2836 20.6405 29.5384 26.4575 27.1592L24.4432 25.8747Z" fill="#1565C0"/>
+            <path d="M16.3503 28.6465C14.9188 28.6465 13.9922 29.5687 13.9922 30.2407C13.9922 32.3329 22.5322 32.5437 25.9158 30.4201L23.7651 28.9921C21.2372 30.1034 14.8873 30.2565 16.3503 28.6465Z" fill="#1565C0"/>
+            <path d="M31.7459 32.0537C31.7459 31.2347 30.8227 30.8488 30.492 30.6641C32.4415 35.3655 10.9646 35.0006 10.9646 32.2251C10.9646 31.5943 12.5457 30.9765 14.007 31.2688L12.7645 30.5347C9.8525 30.0779 7.875 31.358 7.875 32.3905C7.875 37.2056 31.7459 36.9738 31.7459 32.0537Z" fill="#1565C0"/>
+            <path d="M34.126 33.7773C30.4982 37.3605 21.2993 38.666 12.0488 36.4522C21.2993 40.3923 34.0822 38.1733 34.126 33.7773Z" fill="#1565C0"/>
+          </svg>            
+        </div>
+        <h1>Java</h1>
+      </div>
+    </span>
     <!-- REACTJS -->
     <span>
       <div class="flex flex-col items-center gap-4">
@@ -388,7 +430,7 @@ class="font-semibold font-poppins m-auto w-full bg-white dark:bg-slate-950 dark:
   <div id="certificate" class="absolute -mt-20"></div>
   <div class="flex items-center flex-col gap-2">
     <h1 id="titleSection"
-    x-text="$store.language.isEnLanguage ? 'Certificate' : 'Sertifikat'"
+    x-text="$store.language.isEnLanguage ? 'Certificates' : 'Sertifikat'"
     class="text-2xl font-bold"></h1>
     <div id="lineSection" class="w-20 h-1 bg-primary"></div>
   </div>
@@ -456,7 +498,7 @@ class="font-semibold font-poppins m-auto w-full bg-white dark:bg-slate-950 dark:
   <div id="project" class="absolute -mt-20"></div>
   <div class="flex items-center flex-col gap-2">
     <h1 id="titleSection"
-    x-text="$store.language.isEnLanguage ? 'Project' : 'Projek'"
+    x-text="$store.language.isEnLanguage ? 'Projects' : 'Projek'"
     class="text-2xl font-bold"></h1>
     <div id="lineSection" class="w-20 h-1 bg-primary"></div>
   </div>
@@ -618,39 +660,39 @@ class="font-semibold font-poppins m-auto w-full bg-white dark:bg-slate-950 dark:
   ScrollReveal({
     reset: false,
     distance: '40px',
-    duration: 2500,
-    delay: 0
+    duration: 1500,
+    delay: 300
   })
-  ScrollReveal().reveal('#titleSection', { delay: 50, origin: 'left' });
-  ScrollReveal().reveal('#lineSection', { delay: 0, origin: 'left' });
+  ScrollReveal().reveal('#titleSection', { origin: 'left' });
+  ScrollReveal().reveal('#lineSection', { origin: 'left' });
   
   // NAVIGATION
   // ScrollReveal().reveal('#navigationMainIcon a', { delay: 0, interval: 250, reset: false });
   
   // HOME
-  ScrollReveal().reveal('#homeAvatar', { delay: 300, origin: 'bottom' });
-  ScrollReveal().reveal('#homeAvatarBg', { delay: 300, origin: 'bottom' });
+  ScrollReveal().reveal('#homeAvatar', { origin: 'bottom' });
+  ScrollReveal().reveal('#homeAvatarBg', { origin: 'bottom' });
 
-  ScrollReveal().reveal('#homeName', { delay: 300 });
-  ScrollReveal().reveal('#homeTitle', { delay: 400 });
-  ScrollReveal().reveal('#homeDownloadCv', { delay: 500 });
-  ScrollReveal().reveal('#homeMainSocialMedia a', { delay: 600, interval: 200 });
+  ScrollReveal().reveal('#homeName');
+  ScrollReveal().reveal('#homeTitle',);
+  ScrollReveal().reveal('#homeDownloadCv');
+  ScrollReveal().reveal('#homeMainSocialMedia a', { interval: 250 });
 
   // ABOUT
-  ScrollReveal().reveal('#aboutMyDesc', { delay: 0 });
-  ScrollReveal().reveal('#aboutIconAndTitle', { delay: 100 });
+  ScrollReveal().reveal('#aboutMyDesc');
+  ScrollReveal().reveal('#aboutIconAndTitle');
 
   // SKILLS
-  ScrollReveal().reveal('#skillsMainIcon span', { delay: 0, interval: 200 });
+  ScrollReveal().reveal('#skillsMainIcon span', { interval: 250 });
   
   // CERFICATE
-  ScrollReveal().reveal('#certificate', { delay: 0, interval: 800 });
+  ScrollReveal().reveal('#certificate', { interval: 800 });
   
   // PROJECT
-  ScrollReveal().reveal('#project', { delay: 0, interval: 800 });
+  ScrollReveal().reveal('#project', { interval: 800 });
 
   // MOTIVATION
-  ScrollReveal().reveal('#motivation', { delay: 0 });
+  ScrollReveal().reveal('#motivation');
 </script>
 </body>
 </html>
