update year experience

--- a/index.html
+++ b/index.html
@@ -225,7 +225,8 @@
       <!-- SOCIAL MEDIA -->
       <div id="homeMainSocialMedia" class="flex gap-6 mt-5 items-center">
         <a href="https://www.linkedin.com/in/arry-kusuma-putra/" target="_blank">
-          <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <svg class="hover:-mt-2 duration-150" width="30" height="30" viewBox="0 0 30 30" fill="none"
+            xmlns="http://www.w3.org/2000/svg">
             <path
               d="M6.22877 8.99637C7.73927 8.99637 8.96377 7.77187 8.96377 6.26137C8.96377 4.75087 7.73927 3.52637 6.22877 3.52637C4.71828 3.52637 3.49377 4.75087 3.49377 6.26137C3.49377 7.77187 4.71828 8.99637 6.22877 8.99637Z"
               fill="currentcolor" />
@@ -236,7 +237,7 @@
 
         </a>
         <a href="https://www.youtube.com/@CodeArry" target="_blank">
-          <svg class="hover:-mt-2 duration-150" height="30" viewBox="0 0 20 14" fill="none"
+          <svg class="hover:-mt-2 duration-150" height="26" viewBox="0 0 20 14" fill="none"
             xmlns="http://www.w3.org/2000/svg">
             <g clip-path="url(#clip0_107_2)">
               <path
@@ -282,14 +283,9 @@
           <div id="lineSection" class="w-20 h-1 bg-primary"></div>
         </div>
         <h1 id="aboutMyDesc" x-data="{
-        en: '<span>I am Arry Kusuma Putra, a web and application developer with 1 year experience in coding. I\'ve made coding a hobby.</span>',
-        id: '<span>Saya adalah Arry Kusuma Putra, seorang pengembang web dan aplikasi dengan pengalaman 1 tahun dalam coding. Saya telah menjadikan coding sebagai hobi.</span>'
+        en: '<span>I am Arry Kusuma Putra, a web and application developer with more than 3 year experience in coding. I\'ve made coding a hobby.</span>',
+        id: '<span>Saya adalah Arry Kusuma Putra, seorang pengembang web dan aplikasi dengan pengalaman 3 tahun lebih dalam coding. Saya telah menjadikan coding sebagai hobi.</span>'
       }" x-html="$store.language.isEnLanguage ? en : id" class="font-medium text-center mt-8">
-          I am <span class="font-bold">Arry Kusuma Putra</span>, a web and
-          application developer
-          <span class="font-bold">with 1 year experience in coding. I've made coding a hobby</span>
-          and am currently working on developing my skills in web development
-          and apps.
         </h1>
         <div class="flex flex-col md:flex-row gap-10 justify-around mt-12 font-medium text-sm">
           <div id="aboutIconAndTitle" class="flex flex-col items-center gap-2">
